# predictive-maintenance-mcp

./: .env.example  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  ENABLE_DISCUSSIONS.md  EXAMPLES.md  INSTALL.md  MANIFEST.in  PKG-INFO.md  QUICKSTART.md  README.md  READY_FOR_PUBLICATION.md  claude_desktop_config_EXAMPLE.json  pyproject.toml  setup_claude.ps1  setup_venv.py  smithery.json
.github/: DISCUSSIONS_SETUP.md
.github/workflows/: tests.yml
data/: README.md
data/signals/real_test/: OuterRaceFault_vload_6_metadata.json  OuterRaceFault_vload_7_metadata.json  baseline_3_metadata.json
data/signals/real_train/: InnerRaceFault_vload_1_metadata.json  InnerRaceFault_vload_5_metadata.json  OuterRaceFault_vload_1_metadata.json  OuterRaceFault_vload_2_metadata.json  OuterRaceFault_vload_3_metadata.json  OuterRaceFault_vload_4_metadata.json
data/signals/samples/: README.md
resources/machine_manuals/: README.md
src/: document_reader.py  machinery_diagnostics_server.py
tests/: verify.py
